Pagina Mockups primera parte
Eso es para hoy terminado :'(

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <div class="textos">
             <h1 class="titulo">Te presentamos <img src="assets/img/logo-blanco.png" width="170"></h1>
             <h3 class="subtitulo">Una red social para los programadores que buscan nose que mas poner</h3>
-            <a href="#" class="boton">Previsualización de la aplicación</a>
+            <a href="mockups.html" class="boton">Previsualización de la aplicación</a>
         </div>
-        <div class="sesgoabajo"></div>
+        <!--<div class="sesgoabajo"></div> -->
     </div>
 
     <main>
