--- a/mockups.html
+++ b/mockups.html
@@ -27,7 +27,7 @@
                     <li><a href="#" class="link-item">Aplicación</a></li>
                     <li><a href="#" class="link-item">Presentación <i class="fas fa-angle-down"></i></a>
                         <ul class="desplegable">
-                            <li><a href="#">Base de datos</a></li>
+                            <li><a href="esquema.html">Base de datos</a></li>
                             <li><a href="#">Diccionario de datos </a></li>
                         </ul>
                     </li>
